# hackfest-ppl

./: Pipfile  README.md  cheatsheet.ipynb  invert_operator.ipynb  poetry.toml  probabilistic_programming_background.ipynb  pyproject.toml  requirements.txt
data/: grf_forcing_pico.h5
exercises/: monte_hall.ipynb  monty_hall.ipynb  sir_prediction.ipynb
operator_inversion/: __export_data.ipynb  operator_inversion.ipynb
operator_inversion/data/: new_forcing_pico.h5
operator_inversion/src/: _minimise_predictive_loss.py  fourier_2d_generic.py  graphs.py  heatmap.py  plots.py
operator_inversion/src/nn_modules/: fourier_2d_generic.py
primitives/: 01-sampling.ipynb  02-conditioning_and_inference.ipynb  03-dependence_and_shapes.ipynb  04-conditioning_on_data.ipynb  05-regression_with_data.ipynb  coin_tosses.csv  conditioning_and_inference.ipynb  sampling.ipynb
primitives/src/: __init__.py  gen_coin_data.py  graphs.py
src/: _minimise_predictive_loss.py  fourier_2d_generic.py  heatmap.py  minimise_predictive_loss.py  utils.py
src/datamodules/: navier_stokes_h5.py
variational_inference/: ces.ipynb  eig.py  source_location.ipynb
