[tool.poetry]
name = "hackfest-probabilistic-programming"
version = "0.1.0"
description = "Probabilistic inference for erudite persons"
authors = ["Blau, Tom <Tom.Blau@data61.csiro.au>", "Dan MacKinlay <Dan.MacKinlay@data61.csiro.au>", "Khamis, Abdelwahed <Abdelwahed.Khamiss@csiro.au>"]
license = "Modified BSD"

[tool.poetry.dependencies]
python = "^3.9"
pyro-ppl = "^1.7.0"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.1.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
